# radarlib

./: .coverage  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CODE_REVIEW_SUMMARY.md  CONTRIBUTING.md  DATE_BASED_DAEMON.md  FTP_REFACTORING_SUMMARY.md  IMPLEMENTATION_PROCESSING_DAEMON.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  PNG_GENERATION_DAEMON.md  PROCESSING_DAEMON.md  PRODUCT_GENERATION_DAEMON.md  README.md  TESTING_IMPROVEMENTS.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  tox.ini
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/workflows/: ci.yml
docs/: FTP_QUICKSTART.md  bufr_module.md  bufr_module_es.md  bufr_to_pyart.md  bufr_to_pyart_es.md  colormaps.md
examples/: colormap_usage_example.py  daemon_manager_example.py  ftp_client_example.py  ftp_daemon_example.py  ftp_date_daemon_example.py  ftp_integration_example.py  geotiff_generation_example.py  netcdf_generation_example_legacy.py  png_daemon_example.py  png_generation_example.py  png_generation_example_legacy.py  processing_daemon_example.py  product_daemon_example.py  radar_daemon_example.py
examples/daemons/: README.md  daemon_manager_example.py  download_daemon_example.py  ftp_daemon_example.py  ftp_date_daemon_example.py  processing_daemon_example.py  product_daemon_example.py
examples/ftp/: README.md  ftp_client_example.py  ftp_integration_example.py
examples/visualization/: README.md  geotiff_generation_example.py  png_generation_example.py
src/radarlib/: __init__.py  colormaps.py  config.py  core.py  pyart_defaults.py
src/radarlib/cacheVVG_Map/: vvgm_of_RMA11_0315_01_[0.53_0.92_1.32_1.85_2.33_3.12_4.0_5.05_6.37_7.95_9.89_12.35_15.42_19.78_29.71_]_[min_sw_el0].npy
src/radarlib/daemons/: __init__.py  download_daemon.py  manager.py  processing_daemon.py  product_daemon.py
src/radarlib/io/ftp/: ftp.py  (+13 more)
tests/: RMA11_0315_01_DBZH_20251020T152828Z.BUFR  RMA11_0315_01_DBZV_20251020T152828Z.BUFR  RMA11_0315_01_KDP_20251020T152828Z.BUFR  RMA11_0315_01_ZDR_20251020T152828Z.BUFR  RMA11_0315_02_WRAD_20251020T152429Z.BUFR  RMA5_0315_02_VRAD_20251008T183257Z.BUFR  RMA5_0315_02_WRAD_20251008T183257Z.BUFR  __init__.py  conftest.py  test_core.py  verify_colormaps.py
tests/integration/: __init__.py  test_colmax.py  test_colormap_integration.py  test_dec_bufr_file_integration.py  test_end_to_end_bufr_to_pyart.py  test_processing_daemon_integration.py  test_pyart_radar_integration.py
tests/unit/: test_bufr_helpers.py  test_colormaps.py  test_config.py  test_dec_bufr_file_monkeypatched.py  test_fields_utils.py  test_ftp_client.py  test_ftp_daemon.py  test_names_utils.py  test_pyart_defaults.py  test_pyart_writer.py
(+97 files in other folders)
