[metadata]
name = radarlib
version = 0.1.0
description = A Python library for managing radar data and radar products.
author = Javier Guillermo Marti
author_email = jgmarti84@gmail.com
url = https://github.com/yourusername/radarlib
license = MIT

[options]
packages = find:
install_requires =
    numpy
    pandas
    scikit-learn
    matplotlib
    requests
python_requires = >=3.8

[options.extras_require]
dev =
    pytest
    tox
    flake8
    black
    mypy

[options.packages.find]
where = src
include = radarlib*

[flake8]
max-line-length = 120
exclude = src/radarlib/io/bufr/bufr_resources
extend-ignore = E203,E231
